[package]
name = "yadan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rand="0.8.4"
# rand_distr="0.4"
# clap="1.0"
# ansi_term="0.12.0"

serde_json = "1.0"
serde="1.0"
serde_derive="1.0"

sqlx={version="0.5",features=["runtime-async-std-native-tls","sqlite","macros","tls"]}

sea-orm = { version = "0.5", features = [ "runtime-async-std-native-tls", "sqlx-sqlite", "macros" ], default-features = false}
anyhow = "1"
async-std = {version="1",features = ["attributes"]}
futures="0.3"
