[package]
name = "yadan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rand="0.8.4"
# rand_distr="0.4"
# clap="1.0"
# ansi_term="0.12.0"
serde_json = "1.0"
serde="1.0"
serde_derive="1.0"
sqlx={version="0.5",features=["runtime-async-std-native-tls","sqlite","macros","tls"]}
sea-orm = { version = "0.5", features = [ "runtime-async-std-native-tls", "sqlx-sqlite", "macros" ], default-features = false}
anyhow = "1"
async-std = {version="1",features = ["attributes"]}
futures="0.3"
zip="0.5"
jieba-rs={version="0.6",features=["default-dict","tfidf","textrank"]}
word2vec="0.3.3"
ndarray="0.15.0"
linfa="0.5"
linfa-clustering="0.5"
linfa-nn="0.5"
num-traits="0.2"
ndarray-rand="0.2"
rand_isaac="0.3"
approx="0.5"
rand_core="0.6"
rust-bert="0.17.0"
rust_tokenizers="7.0.1"
tch="~0.6.0"
async-trait="0.1"
simple_input="0.4"

[[bin]]
name="main"
path="src/main.rs"

[[bin]]
name="convert-utils"
path="src/utils/convert_models.rs"

[workspace]
default-numbers=['main']